a very good commit

--- a/DockerFile
+++ b/DockerFile
@@ -1,16 +1,19 @@
-# Use an official Python runtime as a parent image
+# Use an official slim Python image
 FROM python:3.11-slim
+
+# Set environment variables (recommended)
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
 # Set the working directory
 WORKDIR /app
 
-# Install system dependencies (if any)
-RUN apt-get update && apt-get install -y --no-install-recommends gcc
+# Install system dependencies (if needed for your packages)
+RUN apt-get update && apt-get install -y --no-install-recommends gcc && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements first (better caching)
+# Install Python dependencies first (for better caching)
 COPY requirements.txt .
-
-# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of your application code
@@ -19,5 +22,5 @@ COPY . .
 # Expose the port FastAPI runs on
 EXPOSE 8000
 
-# Run the server
+# Start FastAPI using uvicorn, pointing to serve:app
 CMD ["uvicorn", "serve:app", "--host", "0.0.0.0", "--port", "8000"]
